# oop-tictactoe-rathors

./: CMakeLists.txt  README.md
include/: Board.h  BoardPosition.h  Controller.h  HumanPlayer.h  Renderer.h  utility.h
include/interface/: IPlayer.h  IRenderer.h
src/: Board.cpp  Controller.cpp  HumanPlayer.cpp  Renderer.cpp  main.cpp
